add a new activity to support aws batch executions
this includes minor refactoring and incompatible model changes